--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.2.21",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
