--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "formik": "^2.2.9",
     "husky": "^8.0.1",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.1",
     "json-server": "^0.17.0",
     "lint-staged": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
