--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
     "typescript": "^4.8.2",
