--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
- "semi": false,
- "trailingComma": "none",
- "singleQuote": true,
- "printWidth": 100,
- "tabWidth": 2,
- "arrowParens": "avoid",
- "bracketSpacing": true
+  "semi": false,
+  "trailingComma": "none",
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "arrowParents": "avoid",
+  "bracketSpacing": true
 }
